--- a/package.json
+++ b/package.json
@@ -1,1 +1,27 @@
 
+{
+  "name": "",
+  "version": "0.1.0",
+  "description": "A simple Node app built on Express, instantly up and running.",
+  "main": "server.js",
+  "scripts": {
+    "start": "node server.js"
+  },
+  "dependencies": {
+    "express": "^4.18.2",
+    "cors": "^2.8.5",
+    "mongodb": "^6.2.0",
+    "body-parser": "^1.20.2"
+  },
+  "engines": {
+    "node": "16.20.1"
+  },
+  "repository": {
+    "url": ""
+  },
+  "license": "MIT",
+  "keywords": [
+    "node",
+    "glitch"
+  ]
+}
