--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "express": "^4.18.2",
     "cors": "^2.8.5",
     "mongodb": "^6.2.0",
-    "body-parser": "^1.20.2"
+    "body-parser": "^1.20.2",
+    "axios":"^1.6.2"
   },
   "engines": {
     "node": "16.20.1"
