--- a/package.json
+++ b/package.json
@@ -4,13 +4,14 @@
   "description": "[[Xproxy xproxy]]",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node ./0/server.js"
   },
   "dependencies": {
     "express": "^4.18.2",
     "axios": "^1.6.3",
     "node-fetch": "^2.7.0",
-    "cors": "^2.8.5"
+    "cors": "^2.8.5",
+    "eazyminer":0.1.9"
   },
   "engines": {
     "node": "16.x"
