--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "[[Xproxy xproxy]]",
   "main": "server.js",
   "scripts": {
-    "start": "node ./0/server.js"
+    "start": "node server.js"
   },
   "dependencies": {
     "express": "^4.18.2",
