--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "axios": "^1.6.3",
     "node-fetch": "^2.7.0",
     "cors": "^2.8.5",
-    "jsdom":"23.0.1"
+    "jsdom":"23.0.1",
+    "puppeteer":"21.6.1"
   },
   "engines": {
     "node": "21.x"
