--- a/package.json
+++ b/package.json
@@ -10,9 +10,7 @@
     "express": "^4.18.2",
     "axios": "^1.6.3",
     "node-fetch": "^2.7.0",
-    "cors": "^2.8.5",
-    "jsdom":"23.0.1",
-    "puppeteer":"21.6.1"
+    "cors": "^2.8.5"
   },
   "engines": {
     "node": "21.x"
