--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "xproxy",
   "version": "0.1.0",
   "description": "[[Xproxy xproxy]]",
-  "main": "server.js",
+  "main": "index.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node index.js"
   },
   "dependencies": {
     "express": "^4.18.2",
